# credits_detection

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.05ff3f8  CMakeLists.txt.user.05ff3f8.4.9-pre1  CMakeLists.txt.user.f5aedd5
build-credits_detection_gui-Desktop_Qt_5_12_1_GCC_64bit-Debug/: credits_detection_gui
credits_detection_gui/: .gitignore  credits_detection_gui.pro
credits_detection_gui/sheets/: timeline.css
credits_detection_gui/src/: crde_credits_timeline.cpp  crde_credits_timeline.h  crde_credits_view.cpp  crde_credits_view.h  crde_main_window.cpp  crde_main_window.h  crde_qt_utils.h  main.cpp
graphs/: S01E01  S01E02  S01E03
src/: crde_exception.cpp  crde_exception.h  crde_utils.cpp  crde_utils.h  credits_detection.cpp  credits_detection.h  main.cpp
